2005-08-22  Corinna Vinschen  <corinna@vinschen.de>

	* mtinfo.h (mtinfo_drive::error): Fix argument bug in debug_printf call.

2005-08-20  Christopher Faylor  <cgf@timesys.com>

	* cygerrno.h (geterrno_from_win_error): Change declaration to default
	to using GetLastError and EACCESS.
	* cygwin.din: Export readdir_r.
	* include/cygwin/version.h: Bump API version number to 138.
	* syscalls.cc (readdir_worker): New function, renamed from old
	readdir() function.
	(readdir): Use readdir_worker.
	(readdir_r): New function.
	* fhandler.h (fhandler_base::readdir): Accommodate second argument
	indicating dirent buffer.
	(fhandler_disk_file::readdir): Ditto.
	(fhandler_cygdrive::readdir): Ditto.
	(fhandler_proc::readdir): Ditto.
	(fhandler_netdrive::readdir): Ditto.
	(fhandler_registry::readdir): Ditto.
	(fhandler_process::readdir): Ditto.
	* fhandler.cc (fhandler_base::readdir): Ditto.
	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Ditto.
	* fhandler_cygdrive.cc (fhandler_cygdrive::readdir): Ditto.
	* fhandler_proc.cc (fhandler_proc::readdir): Ditto.
	* fhandler_netdrive.cc (fhandler_netdrive::readdir): Ditto.
	* fhandler_registry.cc (fhandler_registry::readdir): Ditto.
	* fhandler_process.cc (fhandler_process::readdir): Ditto.
	* include/sys/dirent.h (readdir_r): Add declaration.

2005-08-19  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (dirent_states): Add dirent_saw_proc.
	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Fill in "proc"
	if it is the root dir and it is missing.

2005-08-19  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (dirent_states): Add dirent_isroot, dirent_saw_cygdrive,
	dirent_saw_dev.
	* dir.cc (opendir): Don't zero __flags here.  Push that responsibility
	to opendir methods.
	(seekdir): Preserve dirent_isrrot in __flags.
	(rewinddir): Ditto.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Set
	dirent_isroot appropriately.
	(fhandler_disk_file::readdir): Fill in "cygdrive" and "dev" if it is